src/objects/Authorized_Forms_Of_Payment__c.object
<CustomObject>
    <fields>
        <fullName>AMS_GDP_Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>External ID used for AMS to GDP integration</description>
        <externalId>true</externalId>
        <label>AMS GDP Key</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Form_of_Payment_Code__c</fullName>
        <description>CC = Credit Card; CA = Cash; EP = EasyPay
Mapped to &quot;Authority__c&quot; on AMS Agency Authorization (a8t) for Replication.</description>
        <inlineHelpText>CC = Credit Card
CA = Cash
EP = EasyPay
Mapped to &quot;Authority__c&quot; on AMS Agency Authorization (a8t) for Replication.</inlineHelpText>
        <label>Form of Payment Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CC</fullName>
                </value>
                <value>
                    <fullName>EP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_GDP_Products_Account_View__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Related GDP Product - Account View</description>
        <label>GDP Products - Account View</label>
        <referenceTo>GDP_Products_Account_View__c</referenceTo>
        <relationshipLabel>Authorized Forms Of Payment</relationshipLabel>
        <relationshipName>Remittances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status_Code__c</fullName>
        <description>Assignes a digit for the Status. 9 is assigned to &quot;Active&quot;, 1 is assigned to &quot;Inactive&quot;, 0 is the default value</description>
        <formula>CASE(Status__c,
  &quot;Active&quot;,&quot;9&quot;,
  &quot;Non-Active&quot;,&quot;1&quot;,
  &quot;0&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of the specific Form Of Payment
Mapped to &quot;Status__c&quot; on AMS Agency Authorization (a8t) for Replication.</description>
        <inlineHelpText>Mapped to &quot;Status__c&quot; on AMS Agency Authorization (a8t) for Replication.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Non-Active</fullName>
                </value>
                <value>
                    <fullName>Not Authorized</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Authorized Form Of Payment</label>
    <nameField>
        <displayFormat>AFP-{000000}</displayFormat>
        <label>Authorized Form Of Payment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Authorized Forms Of Payment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>